refactor(test): 移除 ModelServiceRegistryTest 测试类
- 删除了 ModelServiceRegistryTest 类及相关测试用例
- 更新了 README.md 中的测试类列表
- 优化了 pom.xml 中的配置